serp page fix for placeholder image too large

--- a/src/globalStyles/scss/index.scss
+++ b/src/globalStyles/scss/index.scss
@@ -385,3 +385,9 @@ body {
     }
   }
 }
+
+.serp-item {
+  > img {
+    max-width: 223px;
+  }
+}
